coaster/tests/ui/err-02-drop_live_memory.stderr
error[E0499]: cannot borrow `*x` as mutable more than once at a time
  --> $DIR/err-02-drop_live_memory.rs:9:5
   |
8  |     let m = x.write_only(&dev).unwrap();
   |             ------------------ first mutable borrow occurs here
9  |     x.drop(&dev);
   |     ^^^^^^^^^^^^ second mutable borrow occurs here
...
13 |     let _foo = m;
   |                - first borrow later used here
